# pyspark-entity-resolution

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/matched_entities/blocked/: Matched_Entities.csv
spark-conf/: workers
src/: cleaning.py  clustering.py  create_graph.py  match.py  measure_performance.py  performance.py  performance.sh  pipeline.py  pipeline.sh  prepare_data.py  similarity.py  utils.py
