[tool.poetry]
name = "entity-resolution"
version = "0.1.0"
description = ""
authors = ["Kristina Pianykh <kristinavrnrus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.11"
pyspark = "^3.5.0"
pandas = "^2.1.2"
pyarrow = "^14.0.0"
nltk = "^3.8.1"


# [tool.ruff]
# # Exclude a variety of commonly ignored directories.
# exclude = [
#     ".bzr",
#     ".direnv",
#     ".eggs",
#     ".git",
#     ".git-rewrite",
#     ".hg",
#     ".mypy_cache",
#     ".nox",
#     ".pants.d",
#     ".pytype",
#     ".ruff_cache",
#     ".svn",
#     ".tox",
#     ".venv",
#     "__pypackages__",
#     "_build",
#     "buck-out",
#     "build",
#     "dist",
#     "node_modules",
#     ".venv",
# ]
# line-length = 100
# indent-width = 4
# target-version = "py39"
#
# [tool.ruff.lint]
# # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# # McCabe complexity (`C901`) by default.
# select = ["E4", "E7", "E9", "F"]
# ignore = []
#
# # Allow fix for all enabled rules (when `--fix`) is provided.
# fixable = ["ALL"]
# unfixable = []
#
# # Allow unused variables when underscore-prefixed.
# dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
#
# [tool.ruff.format]
# # Like Black, use double quotes for strings.
# quote-style = "double"
#
# # Like Black, indent with spaces, rather than tabs.
# indent-style = "space"
#
# # Like Black, respect magic trailing commas.
# skip-magic-trailing-comma = false
#
# # Like Black, automatically detect the appropriate line ending.
# line-ending = "auto"
#
#
# [tool.poetry.group.dev.dependencies]
# flake8 = "^6.1.0"
# notebook = "^7.0.6"
# ipython = "^8.17.2"
# ruff = "^0.1.3"
# pre-commit = "^3.5.0"
#
# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
